[gd_scene load_steps=3 format=3 uid="uid://game_over"]

[ext_resource type="Script" path="res://scripts/scenes/game_over.gd" id="1_game_over"]
[ext_resource type="Script" path="res://scripts/ui/run_results_screen.gd" id="2_run_results"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_over")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.01, 0.03, 1)

[node name="TitleLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "DISSONANCE"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 100.0

[node name="RetryButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 130.0
offset_right = 100.0
offset_bottom = 175.0
text = "RETRY"

[node name="MenuButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 190.0
offset_right = 100.0
offset_bottom = 235.0
text = "MAIN MENU"

[node name="HallButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 250.0
offset_right = 100.0
offset_bottom = 295.0
text = "HALL OF HARMONY"

[node name="RunResultsScreen" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource("2_run_results")
visible = false
